# temporis

./: .gitignore  LICENSE  README.md  pyproject.toml
src/temporis/: format.py  references.py  temporis.py  timezone.py  zones.py
tests/: test_datetime.py  test_timezone.py
